@@ -588,6 +588,9 @@ extern KeepStacktraces MC_(clo_keep_stacktraces);
 */
 extern Int MC_(clo_mc_level);
 
+/* Should we show mismatched frees?  Default: YES */
+extern Bool MC_(clo_show_mismatched_frees);
+
 
 /*------------------------------------------------------------*/
 /*--- Instrumentation                                      ---*/
